metadata/force-app/main/default/objects/ccrz__E_RequestForQuote__c/fields/ccrz__Amount__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>