metadata/force-app/main/default/objects/ccrz__E_RequestForQuote__c/fields/ccrz__Cart__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Cart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CC Cart</label>
    <referenceTo>ccrz__E_Cart__c</referenceTo>
    <relationshipName>Requests_For_Quote</relationshipName>
    <type>Lookup</type>
</CustomField>