metadata/force-app/main/default/objects/ccrz__E_RequestForQuote__c/fields/ccrz__CloseDate__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CloseDate__c</fullName>
    <label>CloseDate</label>
    <type>Date</type>
</CustomField>