metadata/force-app/main/default/objects/ccrz__E_RequestForQuote__c/fields/ccrz__Description__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Description__c</fullName>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>