metadata/force-app/main/default/objects/ccrz__E_RequestForQuote__c/fields/ccrz__HasOptedOutOfEmail__c.field-meta.xml
<CustomField>
    <fullName>ccrz__HasOptedOutOfEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>