metadata/force-app/main/default/objects/ccrz__E_RequestForQuote__c/fields/ccrz__Phone__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>