metadata/force-app/main/default/objects/ccrz__E_RequestForQuote__c/fields/ccrz__Website__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Website__c</fullName>
    <label>Website</label>
    <type>Url</type>
</CustomField>